fix(full): test deploy cd 8

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches:
       - release-dev
-      - main
   pull_request:
     branches:
-      - main
+      - test-ci
 
 jobs:
   lint-commits:
