--- a/DockerfileFe
+++ b/DockerfileFe
@@ -26,7 +26,7 @@ RUN if [ -z "$BASE_URL" ]; then \
 # Set Envs for the build process
 ENV VITE_API_BASE_URL=${API_URL}
 ENV APP_VERSION=${APP_VERSION}
-ENV VITE_WEBSITE_BASE_URL=${BASE_URL}
+ENV BASE_URL=${BASE_URL}
 
 # Install dependencies
 COPY ./tsconfig.base.json /tsconfig.base.json
