--- a/DockerfileFe
+++ b/DockerfileFe
@@ -26,7 +26,9 @@ RUN if [ -z "$BASE_URL" ]; then \
 # Set Envs for the build process
 ENV VITE_API_BASE_URL=${API_URL}
 ENV APP_VERSION=${APP_VERSION}
-ENV BASE_URL=${BASE_URL}
+ENV VITE_BASE_URL=${BASE_URL}
+# Keep website base for runtime code that may read it
+ENV VITE_WEBSITE_BASE_URL=${BASE_URL}
 
 # Install dependencies
 COPY ./tsconfig.base.json /tsconfig.base.json
@@ -42,7 +44,7 @@ COPY ./fe .
 
 # Create a fresh .env.production file using the ARGs
 # This replaces the "ADD" command
-RUN printf "VITE_API_BASE_URL=%s\nAPP_VERSION=%s\nVITE_WEBSITE_BASE_URL=%s\n" "${API_URL}" "${APP_VERSION}" "${BASE_URL}" > .env.production
+RUN printf "VITE_API_BASE_URL=%s\nAPP_VERSION=%s\nVITE_BASE_URL=%s\n" "${API_URL}" "${APP_VERSION}" "${BASE_URL}" > .env.production
 
 RUN npm run build
 
