--- a/deploy/script/dev/docker-compose.yml
+++ b/deploy/script/dev/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   frontend:
     image: ghcr.io/${GITHUB_REPOSITORY_OWNER:-thewind121212}/jade-fe:${IMG_TAG}
-    container_name: jade-fe-dev
+    container_name: ${FE_CONTAINER_NAME}
     restart: unless-stopped
     networks:
       app_network:
@@ -11,7 +11,7 @@ services:
 
   backend:
     image: ghcr.io/${GITHUB_REPOSITORY_OWNER:-thewind121212}/ciri-be:${IMG_TAG}
-    container_name: ciri-be-dev
+    container_name: ${BE_CONTAINER_NAME}
     restart: unless-stopped
     env_file:
       - .env
