--- a/fe/package.json
+++ b/fe/package.json
@@ -25,13 +25,14 @@
     "react-router-dom": "^7.9.6",
     "supertokens-auth-react": "^0.51.0",
     "tailwindcss": "^4.1.17",
+    "uuid": "^13.0.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
-    "@types/node": "^24.10.1",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
