feat(full): adding package

--- a/be/package.json
+++ b/be/package.json
@@ -22,6 +22,7 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.2.0",
     "@sentry/node": "^8.0.0",
+    "bun": "^1.3.5",
     "bunx": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
