--- a/fe/package.json
+++ b/fe/package.json
@@ -26,7 +26,8 @@
     "supertokens-auth-react": "^0.51.0",
     "tailwindcss": "^4.1.17",
     "uuid": "^13.0.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
