--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -31,6 +31,16 @@ tasks:
     cmds:
       - npm run lint:all
   
+  prisma-generate:
+    desc: Generate Prisma client
+    cmds:
+      - cd be && npx prisma generate
+  
+  prisma-push:
+    desc: Push Prisma schema to database
+    cmds:
+      - cd be && npx prisma db push
+
   docker-restart:
     desc: Restart Docker containers
     cmds:
