feat(full): addind the mino s3 to infastructure

--- a/deploy/infrastructure/docker-compose.yml
+++ b/deploy/infrastructure/docker-compose.yml
@@ -38,6 +38,22 @@ services:
       timeout: 5s
       retries: 5
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio_server
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000" # API Port (Connect your app here)
+      - "9001:9001" # Web Console (Access in browser)
+    environment:
+      MINIO_ROOT_USER: linh
+      MINIO_ROOT_PASSWORD: linhdevtran99Q1@
+    volumes:
+      - minio_data:/data
+    networks:
+      - app_network
+    restart: always
+
 networks:
   app_network:
     external: true
