feat(full): addind the mino s3 to infastructure

--- a/be/env.example
+++ b/be/env.example
@@ -23,3 +23,15 @@ ENVIRONMENT=dev
 # Business limits
 MAX_STORAGE_BY_STORE=6
 MAX_STORE_BY_USER=51
+
+# MinIO / S3 (optional)
+# Run MinIO via deploy/infrastructure/docker-compose.yml then enable below.
+MINIO_ENABLED=false
+MINIO_ENDPOINT=localhost
+MINIO_PORT=9000
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=linh
+MINIO_SECRET_KEY=linhdevtran99Q1@
+MINIO_BUCKET=uploads
+MINIO_REGION=us-east-1
+MINIO_PUBLIC_READ=true
